fixed scroll problem - changed (.content height and overflow) style.css

--- a/imnologio/style.css
+++ b/imnologio/style.css
@@ -39,8 +39,6 @@ a{
 }
 
 .content{
-    height:500px;
-    overflow-y: scroll;
     margin-top: 3em;
     display: flex;
     flex-direction: column;
